# yop

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_cli.py
yop/: cli.py  types.py  utils.py
