[tool.poetry]
name = "yop"
version = "0.0.2"
description = "Yubikey OTP Provisioner"
authors = ["Andrii Yurchuk <ay@mntw.re>"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"          # flake8 >=7.0.0 needs Python >=3.8.1
yubikey-manager = "^5.3.0"
click = "^8.1.7"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"
mypy = "^1.8.0"
types-tabulate = "^0.9.0.20240106"
pytest = "^8.1.1"
pdbpp = "^0.10.3"

[tool.poetry.scripts]
yop = 'yop.cli:safe_cli'

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203"]

[tool.isort]
profile = "black"
line_length = 120
include_trailing_comma = true

[tool.mypy]
check_untyped_defs = true
show_none_errors = true
warn_return_any = true
warn_unused_ignores = true
show_column_numbers = true
strict_optional = true
warn_redundant_casts = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
